# stm32h7-sdmmc

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: stm32h747i-disco.rs
src/: lib.rs  macros.rs  sd_registers.rs  sdmmc.rs
